--- a/Airbnb-Client/public/templates/view.becomeHost.html
+++ b/Airbnb-Client/public/templates/view.becomeHost.html
@@ -23,7 +23,7 @@
 																<div class="landing__step-content-subtitle">Beds,bathrooms, amenities, and more</div>
 																<span><span class="space-top-2" style="transition-delay: 0ms; display: inline-block;">
                                                                     <div>
-                                                                      		<a><button class="btn btn-babu space-top-1 text-large" ng-click="startHosting()">
+                                                                      		<a><button class="btn btn-babu space-top-1 text-large">
 																					<span>Continue</span>
 																				</button>
                                                                             </a>
