--- a/Airbnb-Client/views/index.ejs
+++ b/Airbnb-Client/views/index.ejs
@@ -28,6 +28,8 @@
 
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/style.homepage.css' />
+    <link rel='stylesheet' href='/stylesheets/style.becomeHost.css' />
+    <link rel='stylesheet' href='/stylesheets/style.common.airbnb.css' />
     
   </head>
   <body ng-app="airbnbApp" class="mainBody">
